@@ -1,3 +1,9 @@
+2006-05-28 Paul Jakma <paul.jakma@sun.com>
+
+	* zebra.h: Include inttypes.h rather than stdint.h, best practice
+	  according to the autoconf manual.
+	  Add UINT*_MAX defines for older platforms lacking these (FBSD 4)
+
 2006-05-21 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
 
 	* if.h: (struct connected) Document the meaning of the
